<resources>
    <string name="app_name">EcommerceProductsApp</string>
    <string name="login">Oturum Aç</string>
    <string name="email">E-mail</string>
    <string name="password">Şifre</string>
    <string name="account_question">Hesabınız yok mu?</string>
    <string name="register">Kaydol</string>
    <string name="full_name">Ad Soyad</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="login_question">Zaten bir hesabınız var mı?</string>
    <string name="home_page">Anasayfa</string>
    <string name="categories">Kategoriler</string>
    <string name="add_product">Ürün Ekle</string>
    <string name="profile">Profil</string>
    <string name="category">Kategori</string>
    <string name="product_photo">Ürün Fotoğrafı</string>

    <string name="add_product_success">Ürün başarıyla eklendi.</string>
    <string name="update_product_success">Ürün başarıyla güncellendi.</string>
    <string name="field_cant_be_empty">alanı boş olamaz</string>
    <string name="did_not_match_passwords">Şifreler aynı değil</string>
    <string name="wrong_type">tipi yanlış</string>
    <string name="wrong_password_type">Şifre 6–18 karakter içermeli</string>
    <string name="empty_category">Kategori seçiniz</string>
    <string name="categories_did_not_found">Kategoriler bulunamadı.</string>

    <string name="logout">Çıkış Yap</string>
    <string name="save">Kaydet</string>
    <string name="product_name">Ürün Adı</string>
    <string name="product_description">Ürün Açıklaması</string>
    <string name="price">Fiyat</string>
    <string name="all_products">Tüm Ürünler</string>
    <string name="no">Hayır</string>
    <string name="yes">Evet</string>
    <string name="okay">Tamam</string>
    <string name="edit">Düzenle</string>
    <string name="delete">Sil</string>
    <string name="price_ascending">Artan Fiyat</string>
    <string name="price_descending">Azalan Fiyat</string>
    <string name="sort">Sırala</string>
    <string name="new_to_old">Yeniden Eskiye</string>
    <string name="old_to_new">Eskiden Yeniye</string>
    <string name="update_date">Güncellenme Tarihi</string>
    <string name="price_symbol">₺</string>

</resources>