<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_product.AddProductFragment"
    android:background="@color/screen_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:paddingTop="24dp">

                    <ImageView
                        android:id="@+id/imageViewProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="200dp"
                        android:adjustViewBounds="true"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/im_take_photo"/>

                </RelativeLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name"
                        android:inputType="text|textCapSentences"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_description"
                        android:inputType="textMultiLine|textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/textInputSpinnerCategory"
                        android:layout_marginBottom="4dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputSpinnerCategory"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextSpinnerCategory"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductPrice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:maxLines="1" >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/save"
                    style="@style/button_corner"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


</ScrollView>